--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -13,6 +13,17 @@
   margin: auto;
   padding: 20px 10px
 }
+mat-radio-button {
+  margin: 10px;
+}
+
+::ng-deep .mat-radio-button.mat-accent.mat-radio-checked .mat-radio-outer-circle {
+  border-color: #ffc87c;
+}
+
+::ng-deep .mat-radio-button.mat-accent .mat-radio-inner-circle, .mat-radio-button.mat-accent .mat-radio-ripple .mat-ripple-element:not(.mat-radio-persistent-ripple), .mat-radio-button.mat-accent.mat-radio-checked .mat-radio-persistent-ripple, .mat-radio-button.mat-accent:active .mat-radio-persistent-ripple {
+  background-color: #ffc87c;
+}
 
 .googleBtn {
   left: 20px;
