--- a/src/app/components/header-booking/header-booking.component.html
+++ b/src/app/components/header-booking/header-booking.component.html
@@ -239,10 +239,10 @@
             </mat-form-field>
           </div>
           <div class="col">
-            <mat-form-field style="width: 100%;" appearance="outline">
+            <mat-form-field style="width: 100%;" appearance="outline" >
               <mat-label>ეგზემპლარები</mat-label>
-              <mat-select formControlName="bookCopy">
-                <mat-option *ngFor="let copy of savedBooksArr[i].bookCopies" [value]="copy">
+              <mat-select formControlName="bookCopy" (valueChange)="disableDates(i)">
+                <mat-option *ngFor="let copy of savedBooksArr[i].bookCopies" [value]="copy" >
                   {{copy.code}}
                 </mat-option>
               </mat-select>
@@ -251,8 +251,8 @@
           <div class="col">
             <mat-form-field appearance="outline" >
               <mat-label>აირჩიეთ თარიღები</mat-label>
-              <mat-date-range-input [min]="minDate" [max]="maxDate"  [rangePicker]="picker">
-                <input  matStartDate  placeholder="დასაწყისი" formControlName="startDate">
+              <mat-date-range-input [min]="minDate" [max]="maxDate"  [rangePicker]="picker" [dateFilter]="dateFilter">
+                <input  matStartDate placeholder="დასაწყისი" formControlName="startDate">
                 <input matEndDate placeholder="დასასრული" formControlName="endDate">
               </mat-date-range-input>
               <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
