--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,8 +1,5 @@
 $background-color: #ffc87c;
 
-* {
-  font-family: 'avaza';
-}
 
 img {
     width: 50px;
@@ -15,6 +12,10 @@ img {
     padding: 20px 10px;
     margin: 0 auto;
     display: block;
+}
+
+a {
+  font-family: 'avaza';
 }
 
 .header h1 {
@@ -37,6 +38,40 @@ img {
 
 .btn {
     margin: 10px;
+}
+
+
+mat-icon {
+  color: #030303;
+}
+
+.mat-flat-button .mat-accent, .mat-raised-button.mat-accent, .mat-fab.mat-accent, .mat-mini-fab.mat-accent {
+  background-color: #ffc87c;
+}
+
+
+::ng-deep .mat-step-header .mat-step-icon-selected, .mat-step-header .mat-step-icon-state-done, .mat-step-header .mat-step-icon-state-edit {
+  background-color: #ffc87c;
+  color: black;
+}
+
+
+.small-fab {
+  margin: 0 auto;
+  transition: none !important;
+  box-shadow: none !important;
+  width: 25px;
+  height: 25px;
+  line-height: 25px;
+
+  &::ng-deep .mat-button-wrapper{
+    line-height: 25px;
+    padding: 0;
+  }
+  .mat-icon {
+    font-size: 16px;
+    line-height: 25px;
+  }
 }
 
 .navigation {
