--- a/src/app/components/main-page-user/book-details-page/book-details-page.component.html
+++ b/src/app/components/main-page-user/book-details-page/book-details-page.component.html
@@ -18,7 +18,8 @@
           <mat-icon>download</mat-icon>
           </button>
       </h3>
-      <button style="width: 50%; margin: 0 auto" type="button" class="cancelBtn" mat-raised-button>დაჯავშნა</button>
+      <button type="button" class="detailsBtns" mat-raised-button (click)="booking()">დაჯავშნა</button>
+      <button type="button" class="detailsBtns" mat-raised-button>ფავორიტებში დამატება</button>
     </div>
   </div>
 
