user reservations tested. add to favourites and user reservations display started :)

--- a/src/app/components/main-page-user/book-details-page/book-details-page.component.html
+++ b/src/app/components/main-page-user/book-details-page/book-details-page.component.html
@@ -19,7 +19,7 @@
           </button>
       </h3>
       <button type="button" class="detailsBtns" mat-raised-button (click)="booking()">დაჯავშნა</button>
-      <button type="button" class="detailsBtns" mat-raised-button>ფავორიტებში დამატება</button>
+      <button type="button" class="detailsBtns" mat-raised-button (click)="addToFavourites()">ფავორიტებში დამატება</button>
     </div>
   </div>
 
