--- a/src/app/components/main-page-user/book-details-page/book-details-page.component.html
+++ b/src/app/components/main-page-user/book-details-page/book-details-page.component.html
@@ -18,7 +18,7 @@
           <mat-icon>download</mat-icon>
           </button>
       </h3>
-      <button type="button" class="detailsBtns" mat-raised-button (click)="booking()">დაჯავშნა</button>
+      <button type="button" class="detailsBtns" mat-raised-button [disabled]="data?.bookCopies.length === 0" (click)="booking()">დაჯავშნა</button>
       <button type="button" class="detailsBtns" mat-raised-button (click)="addToFavourites()">ფავორიტებში დამატება</button>
     </div>
   </div>
