some bug fixes and user reservations list added, user phone number edit added.

--- a/src/app/components/admin-page/setting-edit-dialog/setting-edit-dialog.component.html
+++ b/src/app/components/admin-page/setting-edit-dialog/setting-edit-dialog.component.html
@@ -1,7 +1,7 @@
 <div>
   <form [formGroup]="settingForm" style="width: 100%">
     <mat-form-field appearance="fill">
-      <mat-label>დასახელება / კოდი</mat-label>
+      <mat-label>შეიყვანეთ ინფორმაცია</mat-label>
       <input type="text" matInput formControlName="name" required/>
     </mat-form-field>
     <div class="action-buttons">
