--- a/src/app/components/user-page/user-page.component.html
+++ b/src/app/components/user-page/user-page.component.html
@@ -12,12 +12,13 @@
                 <h3>სახელი: <span>{{  userInfo.firstName}}</span> </h3>
                 <h3>გვარი: <span>{{  userInfo.lastName}}</span> </h3>
                 <h3>მეილი: <span>{{  userInfo.email}}</span> </h3>
-                <h3>პირადი ნომერი: <span>{{  userInfo.personalNo}}</span></h3>
-                <h3>ტელეფონის ნომერი: <span>{{  userInfo.phoneNum}}</span></h3>
+                <h3>პირადი ნომერი: <span>{{  userInfo.personalNo}} </span></h3>
+                <h3>ტელეფონის ნომერი: <span>{{  userInfo.phoneNum}} <button  mat-mini-fab class="my-fab" type="button" [matTooltip]="'რედაქტირება'" (click)="phoneNumEdit()">
+                    <mat-icon>edit</mat-icon>
+                  </button> </span></h3>
                 <h3>ქვეყანა: <span> Georgia</span> </h3>
               </mat-card-content>
             </mat-card>
-
         </div>
       </div>
     </div>
@@ -27,17 +28,52 @@
     <div class="d-md-flex h-md-100 justify-content-center">
       <mat-tab-group style="width: 100%">
         <mat-tab label="დაჯავშნილი/გატანილი წიგნები">
-          <div class="row">
-            <div class="col">
-              <h2 class="label">dajavSnili wignebi</h2>
-              <div class="mat-elevation-z8">
-<!--                <table mat-table [dataSource]="reservationDataSource">-->
-<!--                </table>-->
-              </div>
-            </div>
-            <div class="col">
-              <h2 class="label">gatanili wignebi</h2>
-            </div>
+          <h2 class="label">dajavSnili wignebi</h2>
+          <div class="mat-elevation-z8">
+            <table mat-table [dataSource]="reservationDataSource" style="width: 100%">
+              <ng-container matColumnDef="bookTitle">
+                <th mat-header-cell *matHeaderCellDef> დასახელება </th>
+                <td mat-cell *matCellDef="let element"> {{element.bookInfo ? element.bookInfo.title : '' }} </td>
+              </ng-container>
+
+              <ng-container matColumnDef="author">
+                <th mat-header-cell *matHeaderCellDef> ავტორი </th>
+                <td mat-cell *matCellDef="let element"> {{element.bookinfo ? element.bookinfo.author : '' }} </td>
+              </ng-container>
+
+              <ng-container matColumnDef="bookCopyCode">
+                <th mat-header-cell *matHeaderCellDef> ეგზემპლარის N </th>
+                <td mat-cell *matCellDef="let element"> {{element.bookCopy ? element.bookCopy.code : '' }} </td>
+              </ng-container>
+
+              <ng-container matColumnDef="startDate">
+                <th mat-header-cell *matHeaderCellDef> დასაწყისი </th>
+                <td mat-cell *matCellDef="let element"> {{element.startDate ? element.startDate : '' }} </td>
+              </ng-container>
+
+              <ng-container matColumnDef="endDate">
+                <th mat-header-cell *matHeaderCellDef> დასასრული </th>
+                <td mat-cell *matCellDef="let element"> {{element.endDate ? element.endDate : '' }} </td>
+              </ng-container>
+
+              <ng-container matColumnDef="status">
+                <th mat-header-cell *matHeaderCellDef> სტატუსი </th>
+                <td mat-cell *matCellDef="let element"> {{element.status ? element.status : '' }} </td>
+              </ng-container>
+
+              <ng-container matColumnDef="actions">
+                <th mat-header-cell *matHeaderCellDef> გაუქმება </th>
+                <td mat-cell *matCellDef="let element">
+                  <button  mat-mini-fab class="my-fab" type="button" [matTooltip]="'გაუქმება'" (click)="onCancelClick(element)">
+                    <mat-icon>cancel</mat-icon>
+                  </button>
+                </td>
+              </ng-container>
+
+              <tr mat-header-row *matHeaderRowDef="reservationDisplayedColumns"></tr>
+              <tr mat-row *matRowDef="let row; columns: reservationDisplayedColumns;"></tr>
+            </table>
+            <mat-paginator #reservationPagination="matPaginator" [length]="reservationDataSource.data.length" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
           </div>
         </mat-tab>
         <mat-tab label="შენახული წიგნები">
