--- a/src/app/components/main-page-user/book-details-page/book-details-page.component.scss
+++ b/src/app/components/main-page-user/book-details-page/book-details-page.component.scss
@@ -7,6 +7,12 @@ img {
 //  font-family: 'avaza';
 //}
 
+.bordered {
+  border: 1px solid rgba(0, 0, 0, 0.12);
+  padding: 7px !important;
+  border-radius: 5px;
+}
+
 .title {
   font-size: 30px;
 }
