--- a/src/app/components/main-page-user/main-page-user.component.scss
+++ b/src/app/components/main-page-user/main-page-user.component.scss
@@ -7,6 +7,23 @@ mat-paginator {
   padding: 20px;
 }
 
+.filterBtn {
+  float: right;
+  margin-right: 5px;
+}
+
+.vertically-centered {
+  padding: 10px;
+  align-items: center;
+}
+
+.bordered {
+  border: 1px solid rgba(0, 0, 0, 0.12);
+  padding: 7px !important;
+  border-radius: 5px;
+}
+
+
 ::ng-deep mat-card {
   margin-bottom: 20px;
   display:flex;
@@ -24,6 +41,10 @@ mat-paginator {
 ::ng-deep .mat-card-title {
   font-size: 18px;
   font-weight: bold;
+}
+
+::ng-deep .mat-card-content {
+  margin-bottom: 5px;
 }
 
 .column {
