--- a/src/app/components/main-page-user/book-details-page/book-details-page.component.html
+++ b/src/app/components/main-page-user/book-details-page/book-details-page.component.html
@@ -34,6 +34,9 @@
       </mat-card>
     </div>
   </div>
+  <div class="col-8">
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]" [pageSize]="5" showFirstLastButtons></mat-paginator>
+  </div>
   <div class="row">
     <div class="col-8">
       <form [formGroup]="commentsForm">
