--- a/src/app/components/user-page/user-page.component.html
+++ b/src/app/components/user-page/user-page.component.html
@@ -12,8 +12,8 @@
                 <h3>სახელი: <span>{{  userInfo.firstName}}</span> </h3>
                 <h3>გვარი: <span>{{  userInfo.lastName}}</span> </h3>
                 <h3>მეილი: <span>{{  userInfo.email}}</span> </h3>
-                <h3>პირადი ნომერი: <span>{{  userInfo.personalNo}} </span></h3>
-                <h3>ტელეფონის ნომერი: <span>{{  userInfo.phoneNum}} <button  mat-mini-fab class="my-fab" type="button" [matTooltip]="'რედაქტირება'" (click)="phoneNumEdit()">
+                <h3>პირადი ნომერი: <span>{{  userInfo.personalNo? userInfo.personalNo : 'არ არის მითითებული'}} </span></h3>
+                <h3>ტელეფონის ნომერი: <span>{{  userInfo.phoneNumber? userInfo.phoneNumber : 'არ არის მითითებული'}} <button  mat-mini-fab class="my-fab" type="button" [matTooltip]="'რედაქტირება'" (click)="phoneNumEdit()">
                     <mat-icon>edit</mat-icon>
                   </button> </span></h3>
                 <h3>ქვეყანა: <span> Georgia</span> </h3>
@@ -64,7 +64,7 @@
               <ng-container matColumnDef="actions">
                 <th mat-header-cell *matHeaderCellDef> გაუქმება </th>
                 <td mat-cell *matCellDef="let element">
-                  <button  mat-mini-fab class="my-fab" type="button" [matTooltip]="'გაუქმება'" (click)="onCancelClick(element)">
+                  <button *ngIf="element.status === 'PENDING' || element.status === 'CONFIRMED'"  mat-mini-fab class="my-fab" type="button" [matTooltip]="'გაუქმება'" (click)="onCancelClick(element)">
                     <mat-icon>cancel</mat-icon>
                   </button>
                 </td>
@@ -77,7 +77,24 @@
           </div>
         </mat-tab>
         <mat-tab label="შენახული წიგნები">
+          <h2 class="label">favoritebi</h2>
+<!--          <div class="mat-elevation-z8">-->
+<!--            <table mat-table [dataSource]="favouritesDataSource" style="width: 100%">-->
+<!--              <ng-container matColumnDef="bookTitle">-->
+<!--                <th mat-header-cell *matHeaderCellDef> დასახელება </th>-->
+<!--                <td mat-cell *matCellDef="let element"> {{element.bookInfo ? element.bookInfo.title : '' }} </td>-->
+<!--              </ng-container>-->
 
+<!--              <ng-container matColumnDef="author">-->
+<!--                <th mat-header-cell *matHeaderCellDef> ავტორი </th>-->
+<!--                <td mat-cell *matCellDef="let element"> {{element.bookinfo ? element.bookinfo.author : '' }} </td>-->
+<!--              </ng-container>-->
+
+<!--              <tr mat-header-row *matHeaderRowDef="favouritesDisplayedColumns"></tr>-->
+<!--              <tr mat-row *matRowDef="let row; columns: favouritesDataSource;"></tr>-->
+<!--            </table>-->
+<!--            <mat-paginator #favouritesPagination="matPaginator" [length]="favouritesDataSource.data.length" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>-->
+<!--          </div>-->
         </mat-tab>
       </mat-tab-group>
     </div>
