--- a/src/app/components/user-page/user-page.component.html
+++ b/src/app/components/user-page/user-page.component.html
@@ -78,23 +78,40 @@
         </mat-tab>
         <mat-tab label="შენახული წიგნები">
           <h2 class="label">favoritebi</h2>
-<!--          <div class="mat-elevation-z8">-->
-<!--            <table mat-table [dataSource]="favouritesDataSource" style="width: 100%">-->
-<!--              <ng-container matColumnDef="bookTitle">-->
-<!--                <th mat-header-cell *matHeaderCellDef> დასახელება </th>-->
-<!--                <td mat-cell *matCellDef="let element"> {{element.bookInfo ? element.bookInfo.title : '' }} </td>-->
-<!--              </ng-container>-->
+          <div class="mat-elevation-z8">
+            <table mat-table [dataSource]="favouritesDataSource" style="width: 100%">
+              <ng-container matColumnDef="bookTitle">
+                <th mat-header-cell *matHeaderCellDef> დასახელება </th>
+                <td mat-cell *matCellDef="let element"> {{element.bookinfo ? element.bookinfo.title : '' }} </td>
+              </ng-container>
 
-<!--              <ng-container matColumnDef="author">-->
-<!--                <th mat-header-cell *matHeaderCellDef> ავტორი </th>-->
-<!--                <td mat-cell *matCellDef="let element"> {{element.bookinfo ? element.bookinfo.author : '' }} </td>-->
-<!--              </ng-container>-->
+              <ng-container matColumnDef="author">
+                <th mat-header-cell *matHeaderCellDef> ავტორი </th>
+                <td mat-cell *matCellDef="let element"> {{element.bookinfo ? element.bookinfo.author : '' }} </td>
+              </ng-container>
 
-<!--              <tr mat-header-row *matHeaderRowDef="favouritesDisplayedColumns"></tr>-->
-<!--              <tr mat-row *matRowDef="let row; columns: favouritesDataSource;"></tr>-->
-<!--            </table>-->
-<!--            <mat-paginator #favouritesPagination="matPaginator" [length]="favouritesDataSource.data.length" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>-->
-<!--          </div>-->
+              <ng-container matColumnDef="note">
+                <th mat-header-cell *matHeaderCellDef> შენიშვნა </th>
+                <td mat-cell *matCellDef="let element"> {{element.note ? element.note : '' }} </td>
+              </ng-container>
+
+              <ng-container matColumnDef="actions">
+                <th mat-header-cell *matHeaderCellDef>  </th>
+                <td mat-cell *matCellDef="let element">
+                  <button mat-mini-fab class="my-fab" type="button" [matTooltip]="'ნახვა'" (click)="viewFavBooksDetails(element)">
+                    <mat-icon>visibility</mat-icon>
+                  </button>
+                  <button mat-mini-fab class="my-fab" type="button" [matTooltip]="'წაშლა'" (click)="deleteFromFavourite(element)">
+                    <mat-icon>delete</mat-icon>
+                  </button>
+                </td>
+              </ng-container>
+
+              <tr mat-header-row *matHeaderRowDef="favouritesDisplayedColumns"></tr>
+              <tr mat-row *matRowDef="let row; columns: favouritesDisplayedColumns;"></tr>
+            </table>
+            <mat-paginator #favouritesPagination="matPaginator" [length]="favouritesDataSource.data.length" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+          </div>
         </mat-tab>
       </mat-tab-group>
     </div>
