--- a/src/app/components/header-booking/reservations-details-page/reservations-details-page.component.html
+++ b/src/app/components/header-booking/reservations-details-page/reservations-details-page.component.html
@@ -73,4 +73,9 @@
         </mat-form-field>
       </div>
     </div>
+  <div class="row">
+    <div class="justify-end mt-24 child-ml-12 action" >
+      <button type="button" class="closeBtn" mat-raised-button (click)="onCloseClick()">დახურვა</button>
+    </div>
+  </div>
   </div>
