--- a/src/app/components/header-booking/reservations-details-page/reservations-details-page.component.scss
+++ b/src/app/components/header-booking/reservations-details-page/reservations-details-page.component.scss
@@ -3,3 +3,13 @@
   border-radius: 5px;
   padding: 10px !important;
 }
+
+.action {
+  padding: 10px;
+  margin: 0 auto;
+}
+
+.mat-flat-button, .mat-raised-button, .mat-fab, .mat-mini-fab {
+  background-color: #ffc87c;
+}
+
