--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -27,7 +27,7 @@
       </mat-radio-group>
       <div style="margin: 20px">
         <button (click)="loginAsAdmin()" [disabled]="role.value === 'user'" mat-raised-button>შესვლა</button>
-        <button (click)="loginWithGoogle()" [disabled]="role.value === 'admin'" mat-raised-button class="google-login-btn googleBtn">Google</button>
+        <button (click)="loginWithGoogle()" [disabled]="role.value === 'admin'" mat-raised-button class="google-login-btn googleBtn">Sign in with Google</button>
       </div>
     </div>
   </form>
